<resources>
    <string name="app_name">EzDine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sale">Sale</string>
    <string name="menu_order">Orders</string>

    <string name="menu_logout">Logout</string>

    <string name="login">Login</string>
    <string name="enter_pin">Enter PIN</string>

    <string name="enter_table_no">Enter Table Number</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>


</resources>