<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/margin_16"
    app:cardElevation="0dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/tvConfirmPaymentHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="Confirm Payment"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/text_20_ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTableNo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_25"
                android:hint="@string/enter_table_no"
                android:minWidth="@dimen/_200sdp"
                android:textColorHint="@color/dark_blue"
                app:boxStrokeColor="@color/dark_blue"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/dark_blue"
                app:hintTextColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvConfirmPaymentHeader"
                app:startIconTint="@color/dark_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiedTableNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/dark_blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_25"
                android:hint="@string/enter_first_name"
                android:minWidth="@dimen/_200sdp"
                android:textColorHint="@color/dark_blue"
                app:boxStrokeColor="@color/dark_blue"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/dark_blue"
                app:hintTextColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilTableNo"
                app:startIconTint="@color/dark_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiedFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text"
                    android:maxLength="16"
                    android:textColor="@color/dark_blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_25"
                android:hint="@string/enter_last_name"
                android:minWidth="@dimen/_200sdp"
                android:textColorHint="@color/dark_blue"
                app:boxStrokeColor="@color/dark_blue"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/dark_blue"
                app:hintTextColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilFirstName"
                app:startIconTint="@color/dark_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiedLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text"
                    android:maxLength="16"
                    android:textColor="@color/dark_blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_25"
                android:background="@drawable/background_curved_12dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/btnConfirm"
                app:layout_constraintTop_toBottomOf="@+id/tilLastName" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_25"
                android:layout_marginBottom="@dimen/margin_30"
                android:background="@drawable/background_curved_12dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilLastName" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>